--- a/index.html
+++ b/index.html
@@ -4,6 +4,6 @@
     First github website
   </title>
   <body>
-    initialize first github 
+    <h1>initialize first github </h1>
   </body>
 </html>
